k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-coiffure-deployment
  labels:
    app: gestion-coiffure
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion-coiffure
  template:
    metadata:
      labels:
        app: gestion-coiffure
    spec:
      containers:
      - name: gestion-coiffure
        image: anasxaz/gestion-coiffure:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
