k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-coiffure-service
spec:
  type: NodePort
  selector:
    app: gestion-coiffure
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
